--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ boto3==1.36.7
 Flask==3.1.0
 python-dotenv==0.21.1
 jira==3.8.0
-pydantic~=2.10.6
-prometheus-flask-exporter~=0.22.0
+pydantic==2.10.6
+prometheus-flask-exporter==0.22.0
 gunicorn==23.0.0
